# labs

!ADDITIONALS/lab1_add/: CMakeLists.txt  main.cpp
!ADDITIONALS/lab3_add/: CMakeLists.txt  Functions.cpp  Functions.hpp  main.cpp
!ADDITIONALS/lab4_add/: CMakeLists.txt  main.cpp
!ADDITIONALS/lab5_add/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
!ADDITIONALS/lab7_add/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
!ADDITIONALS/lab8_add/: CMakeLists.txt  main.cpp  parallelogram.cpp  parallelogram.hpp
ADDITIONALS_2/: README.md  main.cpp  readme.txt
ADDITIONALS_2/lab1_add_2/: CMakeLists.txt  main.cpp
ADDITIONALS_2/lab2_add_2/: CMakeLists.txt  Timer.h  functions.cpp  functions.hpp  main.cpp
ADDITIONALS_2/lab3_add_2/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
ADDITIONALS_2/lab4_add_2/: BMP.cpp  BMP.hpp  CMakeLists.txt  main.cpp
ADDITIONALS_2/lab5_add_2/: CMakeLists.txt  main.cpp
lab1/: FirstProgram.cpp
lab10/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.hpp
lab11/: CMakeLists.txt  equipment.cpp  equipment.hpp  main.cpp
lab2/: lab2.cpp
lab20_6&7/: CMakeLists.txt
lab20_7|8/: main.cpp
lab3/: lab3.cpp
lab4/: lab4.cpp
lab4/lab4.2/: input.txt  lab4.2.cpp
lab4/lab4.3/: input.txt  lab4.3.cpp
lab5/lab5.1/: lab5.1.cpp
lab5/lab5.2/: input.txt  lab5.2.cpp  output.txt
lab6-7/: CMakeLists.txt  SomeFunctions.cpp  SomeFunctions.hpp  input.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp  main2.cpp
lab9/: CMakeLists.txt  main.cpp
lab_14/: CMakeLists.txt  Timer.hpp  functions.cpp  functions.hpp  main.cpp
lab_16/: CMakeLists.txt  README.md  functions.cpp  functions.hpp  main.cpp
lab_17/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
lab_19/: CMakeLists.txt  Timer.hpp  functions.cpp  functions.hpp  main.cpp
lab_20_10/: BMP.cpp  BMP.hpp  README.md  main.cpp  matrix.h
lab_20_11/: CMakeLists.txt  C_PLUS_PLUS.hpp  CodeGenerator.hpp  Java.hpp  Languages.hpp  PHP.hpp  main.cpp
lab_20_12/: CMakeLists.txt  Student.hpp  Teacher.hpp  main.cpp
lab_20_13/: CMakeLists.txt  main.cpp
lab_20_13/inc/: camera.hpp  matrix.hpp  scene.hpp
lab_20_13/src/: camera.cpp  scene.cpp
lab_20_5/: CMakeLists.txt  functions.cpp  functions.hpp  input.txt  main.cpp  output.txt
lab_20_6/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
lab_20_7|8/: matrix.h
lab_20_9/: BMP.cpp  BMP.hpp  CMakeLists.txt  main.cpp  matrix.h
